Fix gap in button styling

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -275,7 +275,7 @@ button {
   display: flex;
   flex-direction: row;
   margin: 0 10em;
-  gap: 2em
+  gap: 2em;
 }
 
 .product-grid li {
